@@ -1,2 +1,12 @@
 # TheClassJoiner
 This Repository contains the files for the project "TheClassJoiner"
+
+TheClassJoiner is an Executable Jar File which will automatically join and leave my classes for me.
+It is all created in Java. 
+
+Java 8u311 (jre1.8.0_311) and JDK 17.0.1 (jdk-17.0.1) were created to use this file.
+
+To run the file, you need to use the following command with the arguements.
+  start javaw -jar --enable-preview TheClassJoiner.jar
+
+The jar will keep running in the background till school comes to an end (2PM)
